--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
   "name": "react-native-receive-data",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +14,9 @@
   "peerDependencies": {
     "react-native": "^0.41.2",
     "react-native-windows": "0.41.0-rc.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/diwakarshuklar/ReceiveData.git"
   }
 }
